welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:17: error: not found: value to
  for (k <-  to L-1){      
             ^